crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Name_can't_be_given_…_(8f6aed0dba79e995).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Name can't be given more than once
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", name="T")
```

# Diagnostics

```
error[invalid-legacy-type-variable]: The `name` parameter of `TypeVar` can only be provided once.
 --> src/mdtest_snippet.py:4:18
  |
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", name="T")
  |                  ^^^^^^^^
  |
info: rule `invalid-legacy-type-variable` is enabled by default

```
